<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManagerAddMovieActivity">
    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="#FFFFFF"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/backMovie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|left"
            android:layout_marginLeft="10dp"
            android:background="#00000000"
            android:contentDescription="hahah"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_back_button"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center|left"
            android:layout_marginLeft="40dp"
            android:gravity="top"
            android:text="Thêm phim mới"
            android:textSize="22sp"
            android:textStyle="bold" />
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FAFAFA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="100dp"
                android:text="Tên phim"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="100dp"
                android:text="*"
                android:textColor="@color/red"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:background="@color/white"
                android:elevation="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView">

                <EditText
                    android:id="@+id/enterTitle"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:hint="Nhập tên phim"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:text="Poster"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="30dp"
                android:text="*"
                android:textColor="@color/red"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout3"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="5dp"
                android:background="@color/white"
                android:elevation="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2">

                <ImageView
                    android:id="@+id/selectPoster"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="#00000000"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_add"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/setPoster"
                    android:layout_width="360dp"
                    android:layout_height="200dp"
                    android:background="@drawable/image_button"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:text="Thông tin chi tiết"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="30dp"
                android:text="*"
                android:textColor="@color/red"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout3" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout4"
                android:layout_width="match_parent"
                android:layout_height="432dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:background="@color/white"
                android:elevation="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3">

                <EditText
                    android:id="@+id/enterReleased"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:hint="Ngày công chiếu"
                    android:inputType="datetime"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/enterRuntime"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:hint="Thời lượng phim"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/enterReleased" />

                <EditText
                    android:id="@+id/enterGenre"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:hint="Thể loại"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/enterRuntime" />

                <EditText
                    android:id="@+id/enterDirector"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:hint= "Đạo diễn"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/enterGenre" />

                <EditText
                    android:id="@+id/enterWriter"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:hint="Nhà sản xuất kịch bản"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/enterDirector" />

                <EditText
                    android:id="@+id/enterActors"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:hint="Diễn viên"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/enterWriter" />

                <EditText
                    android:id="@+id/enterPlot"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:hint="Cốt truyện"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/enterActors" />

                <EditText
                    android:id="@+id/enterLanguage"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:hint="Ngôn ngữ"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/enterPlot" />
                <EditText
                    android:id="@+id/enterTrailerLink"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:hint="Link trailer"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/enterLanguage" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <Button
                android:id="@+id/add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="40dp"
                android:text="Thêm"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout4" />
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>