...
                app:srcCompat="@drawable/event" />
        </LinearLayout>

    </HorizontalScrollView>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="308dp"
        android:textStyle="bold"
        android:text="Đang chiếu"
...
