...
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="125dp"
                        android:layout_height="wrap_content"
                        android:text="Kiểm duyệt:"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/censor"
                        android:layout_width="wrap_content"
...
